2006-01-26  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml (faq.programming.ipc): Add new FAQ about
	cygserver and its relation to the "Bad system call" error.
	* faq-setup.xml (faq.setup.uninstall-all): Mention postgresql.
	* overview2.sgml: Update security info on shared memory.

2006-01-25  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml (faq.programming.building-cygwin): Add
	list of packages required for building and exact check instructions.
	* faq-setup.xml (faq.setup.uninstall-service): New instructions
	on uninstalling a cygwin service.
	(faq.setup.uninstall-all): Reference new service uninstall FAQ.

2006-01-25  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* faq-setup.xml (faq.setup.snapshots): Rename DLL using Windows tools.

2006-01-18  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* Makefile.in : Remove references to old texinfo FAQ.
	* calls.texinfo : Remove.
	* changes.texinfo : Remove.
	* copy.texinfo : Remove.
	* faq.texinfo : Remove.
	* history.texinfo : Remove.
	* how-api.texinfo : Remove.
	* how-programming.texinfo : Remove.
	* how-resources.texinfo : Remove.
	* how-using.texinfo : Remove.
	* how.texinfo : Remove.
	* install.texinfo : Remove.
	* readme.texinfo : Remove.
	* relnotes.texinfo : Remove.
	* what.texinfo : Remove.
	* who.texinfo : Remove.

2006-01-12  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* doctool.c (scan_directory): Ignore "CVS" directories.
	* faq-setup.xml (faq.setup.setup): Correct URL typo.
	(faq.setup.snapshots): Clarify.

2005-12-30  Christopher Faylor  <cgf@timesys.com>

	* relnotes.texinfo: Remove entry about hyperthreaded processor.

2005-12-30  Christopher Faylor  <cgf@timesys.com>

	* faq-problems.html: Remove entry about hyperthreaded processor.

2005-12-12  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml: Add note about struct stat64.

2005-12-03  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>
