@@ -1,0 +1,9 @@
+THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
+IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+
+Cygwin documentation is available on the net at http://cygwin.com
+You might especially be interested in
+
+http://cygwin.com/faq/faq.programming.html#faq.programming.building-cygwin
+
